Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116429

widgetgraphgallery: surfacegraph should open slice view immediately

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.0 FF
    • 6.6, 6.7
    • Graphs: 3D
    • None
    • dc5e8daa9 (dev)

      Surface graph should open the slice view immediately if point is selected when changing the selectionmode.

      Steps to reproduce:

      1. widgetgraphgallery
      2. surfacegraph
      3. select graph point
      4. change selection to slice

      Should open the slice view immediately

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dilek Dilek Akcay
            oulu_hillbilly Sami Varanka
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes