Update slice graphs according to selection mode on surface graphs

Fixes: QTBUG-116429
Change-Id: Idbb312a8af0a670671a839bb7f8380225e7b3051
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>